--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ body {
   justify-content: center;
   flex-direction: column;
   width: 100%;
-  height: 50dvh;
+  height: 40dvh;
   align-items: center;
   row-gap: 50px;
   background-color: #e51a2d;
@@ -21,7 +21,7 @@ body {
 }
 
 header {
-  position: absolute;
+  position: relative;
   display: flex;
   width: 100%;
   align-items: center;
@@ -162,6 +162,7 @@ header div button:hover {
   flex-wrap: wrap;
   flex-basis: 0;
   flex-grow: 1;
+  margin-bottom: 40px;
   backdrop-filter: blur(5px);
   box-shadow: 0 1rem 1.5rem -0.75rem rgb(37 46 105 / 30%);
 }
@@ -366,9 +367,6 @@ footer .footer-container .other-contents ul {
 }
 
 @media screen and (max-width: 501px) {
-  .main-tool {
-    height: 60dvh;
-  }
   .main-tool form .input-wrapper {
     max-width: 350px;
   }
@@ -429,6 +427,7 @@ footer .other-contents nav a:link {
 }
 /* Accordion */
 .page-title {
+  text-align: center;
   display: flex;
   justify-content: center;
   font-size: 25px;
@@ -597,4 +596,12 @@ footer .other-contents nav a:link {
   color: #868e96;
   opacity: 0.4;
   letter-spacing: 1px;
+}
+
+@media (max-width: 641px) {
+  .title,
+  .number,
+  .icon {
+    font-size: 18px;
+  }
 }
